cloud-infra-macros/tests/fails/memory_too_high.rs
use cloud_infra_macros::memory;

fn example() {
    let mem = memory!(20480);
}

fn main() {}