cloud-infra-macros/tests/fails/memory_too_high.stderr
error: value should be at most 10240
 --> tests/fails/memory_too_high.rs:4:23
  |
4 |     let mem = memory!(20480);
  |                       ^^^^^
